crates/toml/tests/snapshots/invalid/control/rawmulti-lf.stderr
TOML parse error at line 1, column 24
  |
1 | rawmulti-lf   = '''null'''
  |                        ^
invalid multi-line literal string, expected non-single-quote characters
